--- a/TranslationBridge/accounts/templates/accounts/signin.html
+++ b/TranslationBridge/accounts/templates/accounts/signin.html
@@ -16,13 +16,13 @@
                 
 
                 <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="username" name="username">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="username" name="username" required>
                     <label for="floatingInput">User name</label>
                 </div>
 
 
                 <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" required>
                 <label for="floatingPassword">Password</label>
                 </div>
             
