--- a/TranslationBridge/companies/templates/companies/companies_list.html
+++ b/TranslationBridge/companies/templates/companies/companies_list.html
@@ -73,7 +73,7 @@ body {
     background-image: url('/static/images/compny.jpg'); 
     background-size: cover;
     background-position: center;
-    background-attachment: fixed; /* عشان تتحرك الصفحة والصورة تبقى ثابتة */
+    background-attachment: fixed;
 }
 .company-card {
     width: 60%;
