--- a/TranslationBridge/main/templates/main/home.html
+++ b/TranslationBridge/main/templates/main/home.html
@@ -92,6 +92,35 @@
 </section>
 
 
+  <!-- featured companies -->
+<div class="d-flex justify-content-between align-items-center mb-3 ms-4">
+    <div>
+        <h3 class="fw-bold">Company</h3>
+        <p class="text-muted">Learn more about companies</p>
+    </div>
+
+    <a href="{% url 'companies:companies_list_view' %}" class="text-decoration-none fw-semibold" style="color: #001f4d; margin-right: 30px;">
+        More →
+    </a>
+</div>
+
+
+<div class="row row-cols-md-3 g-4">
+    {% for company in companies|slice:":3" %}
+        <div class="col d-flex justify-content-center"> 
+            <div class="card-body text-center" style="width: 18rem;">
+                <a href="{% url 'companies:companies_list_view' %}" class="text-decoration-none text-dark">
+                    <img src="{{ company.country.flag.url }}" class="card-img-top mb-2" alt="country flag" style="height: 80px; width: 120px; object-fit: contain; display: block; margin: 0 auto;">
+                    <h5>{{ company.name }}</h5>
+                </a>
+                <p>{{ company.description|truncatewords:15 }}</p>
+                <h5>
+                    {% for i in "12345"|slice:":company.rating" %}⭐{% endfor %}
+                </h5>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 
 
