translator list page, detail

--- a/TranslationBridge/translators/templates/translators/translators_list.html
+++ b/TranslationBridge/translators/templates/translators/translators_list.html
@@ -3,3 +3,9 @@
 
 
 {% block title %} Show translators list page {% endblock %}
+
+{% block content %}
+
+    {% include 'translators/translators_include_list.html' %}
+
+{% endblock %}
