--- a/TranslationBridge/translators/templates/translators/translators_create.html
+++ b/TranslationBridge/translators/templates/translators/translators_create.html
@@ -86,6 +86,8 @@
             <div class="col-8">
                 <form class="d-flex flex-column gap-2" action="{% url 'translators:create_translator_view' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    <!-- Translator name / nickname -->
+                    <textarea  class="form-control" name="name" placeholder="write your nickname here" required></textarea>
                     <!-- Location -->
                     <h3 class="m-0 p-0"> Select your location : </h3>
                     <label for="city_select"> <h5>City</h5></label>
@@ -109,7 +111,7 @@
                 <textarea  class="form-control" name="experience" placeholder=" write here a short description about your experience" required></textarea>
                 <!-- specialty -->
                 <h3> Write down about your specialty : </h3>
-                <textarea  class="form-control" name="specialty" placeholder=" write here a short description about your experience" required></textarea>
+                <textarea  class="form-control" name="specialty" placeholder=" write here a about your specialty" required></textarea>
                 <input type="submit" value="Add information" class="btn btn-brown mt-4" />                
                 </form>
             </div>
