--- a/TranslationBridge/translation_request/templates/translation_request/request_create.html
+++ b/TranslationBridge/translation_request/templates/translation_request/request_create.html
@@ -51,8 +51,8 @@
                   <input type="file" name="file" class="form-control">
               </div>
               <div class="mb-3">
-                  <label>Translation Duration (days):</label>
-                  <input type="number" name="duration_days" class="form-control">
+                  <label>Translation Duration:</label>
+                  <input type="text" name="duration_days" class="form-control" placeholder="e.g. 2 days, 1 week, or as agreed">
               </div>
             </div>
             <!-- ========== قسم طلب مترجم ========== -->
