--- a/TranslationBridge/main/templates/main/base.html
+++ b/TranslationBridge/main/templates/main/base.html
@@ -43,13 +43,13 @@
                 <li class="nav-item">
                     <a class="nav-link px-3 rounded-pill" href="{% url 'main:contact_view' %}" style="font-weight:500;">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     {% if request.user.is_authenticated %}
-                        <div class="d-flex gap-1 align-items-center">
-                            <h6 class="p-0 m-0 text-white" >
+                        <div class="d-flex gap-1 align-items-center justify-content-center">
+                            <h6 class="p-0 m-0 text-muted" >
                                 welcome {{ request.user.username }}
                             </h6>
-                            <a href="{% url 'accounts:logout' %}" class="nav-item" > Logout </a>
+                            <a href="{% url 'accounts:log_out' %}" class="nav-link px-3 rounded-pill" > Logout </a>
                         </div>
                     {% else %}
                         <div class="dropdown">
@@ -70,19 +70,19 @@
 
 
 
-
-
-<main>
     {% if messages %}
-  
+        <div class="container mt-4">
         {% for message in messages %}
-            <div class="alert {{message.tags}} alert-dismissible fade show" role="alert">
+            <div class="alert {{message.tags}} alert-dismissible fade show " role="alert">
             {{message}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-        {% endfor %}
-
+        {% endfor %}</div>
     {% endif %}
+
+
+
+<main>
 
 
     {% block content %}
