--- a/TranslationBridge/accounts/templates/accounts/profile.html
+++ b/TranslationBridge/accounts/templates/accounts/profile.html
@@ -18,6 +18,9 @@
                     <div style="background:#fff9f3; border-radius:18px; box-shadow:0 4px 24px #c8b08bc8; padding:32px 28px; margin-left:-280px;">
                     {% if request.user == user %} 
                         <a href="{% url 'accounts:update_profile_view' %}"><i class="w-50 bi-pencil-square"></i></a> <!-- ايقونه تعديل الملف الشخصي  -->
+                        {% if request.user.profile.user_type == 'translator' %}
+                        <a href="{% url 'translators:create_translator_view' %}"><i class="bi bi-plus-square"></i></a>
+                        {% endif %}
                     {% endif %}
                         <h2 style="font-size:2rem; font-weight:700; color:#a67c52; margin-bottom:32px; text-align:left; font-family: 'Courier New', Courier, monospace;">PROFILE</h2>
                               
