--- a/TranslationBridge/translation_request/templates/translation_request/request_detail.html
+++ b/TranslationBridge/translation_request/templates/translation_request/request_detail.html
@@ -103,17 +103,22 @@
             </div>
           </div>
           <div class="text-center mt-4 g-3 ">
-             <!--اعدل علئ الشرط بعدين -->
-              <a href="{% url 'translation_request:request_update_view' translation_request.pk %}" class="btn btn-light px-4 py-2 fw-bold" style="font-size:1.1rem; letter-spacing:1px;"> Update Request ..</a>
-              <a href="{% url 'translation_request:request_delete_view' translation_request.pk %}" class="btn btn-danger px-4 py-2 fw-bold" style="font-size:1.1rem; letter-spacing:1px;"> Delete Request ..</a>
-              <div class="d-flex justify-content-center gap-2 mt-3">
-                <button class="btn btn-outline-success btn-sm d-flex align-items-center" style="font-size:1rem;">
-                  <i class="bi bi-hand-thumbs-up me-1"></i> Accept
-                </button>
-                <a href="{% url 'translation_request:request_list_view' %}" class="btn btn-outline-secondary btn-sm d-flex align-items-center" style="font-size:1rem;">
-                  <i class="bi bi-hand-thumbs-down me-1"></i> Reject
-                </a>
-              </div>
+
+             <!--اعدل علئ الشرط بعدين --><!-- تم التعديل --> 
+              {% if request.user.is_authenticated and request.user == translation_request.company %}
+                <a href="{% url 'translation_request:request_update_view' translation_request.pk %}" class="btn btn-light px-4 py-2 fw-bold" style="font-size:1.1rem; letter-spacing:1px;"> Update Request ..</a>
+                <a href="{% url 'translation_request:request_delete_view' translation_request.pk %}" class="btn btn-danger px-4 py-2 fw-bold" style="font-size:1.1rem; letter-spacing:1px;"> Delete Request ..</a>
+              {% endif %}
+              {% if request.user.is_authenticated and request.user.profile.user_type == 'translator' %}
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                  <button class="btn btn-outline-success btn-sm d-flex align-items-center" style="font-size:1rem;">
+                    <i class="bi bi-hand-thumbs-up me-1"></i> Accept
+                  </button>
+                  <a href="{% url 'translation_request:request_list_view' %}" class="btn btn-outline-secondary btn-sm d-flex align-items-center" style="font-size:1rem;">
+                    <i class="bi bi-hand-thumbs-down me-1"></i> Reject
+                  </a>
+                </div>
+              {% endif %}
           </div>
         </div>
       </div>
