--- a/TranslationBridge/translators/templates/translators/translators_list.html
+++ b/TranslationBridge/translators/templates/translators/translators_list.html
@@ -250,9 +250,12 @@
     
 </div>
 
-<a href="{% url 'translation_request:request_create_view' %}" class="btn btn-success d-flex align-items-center justify-content-center" style="position: fixed; top: 100px; right: 30px; width:56px; height:56px; border-radius:50%; box-shadow:0 2px 8px #2471a350; font-size:2rem; z-index:1000;">
-  <i class="bi bi-plus"></i>
-</a>
+{% if request.user.is_authenticated and request.user.profile.user_type == 'company' %}
+    <a href="{% url 'translation_request:request_create_view' %}" class="btn btn-success d-flex align-items-center justify-content-center" style="position: fixed; top: 100px; right: 30px; width:56px; height:56px; border-radius:50%; box-shadow:0 2px 8px #2471a350; font-size:2rem; z-index:1000;">
+    <i class="bi bi-plus"></i>
+    </a>
+{% endif %}
+
 <div class="d-flex justify-content-end" style="position: fixed; top: 170px; right: 30px; margin-bottom: 20px; z-index:1000;">
     <a href="{% url 'translation_request:request_list_view' %}" class="icon-box shadow d-flex align-items-center justify-content-center" style="width:56px; height:56px; border-radius:16px; background:#fff; border:2px solid #e3e3e3;">
         <i class="bi bi-grid-3x3-gap-fill fs-2" style="color:#1a237e;"></i>
